DevOps/Projects/k8s-zerodowntime-eks/k8s/11-deploy-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-canary
  namespace: app-demo
  labels: { app: web, track: canary }
spec:
  replicas: 1
  selector:
    matchLabels: { app: web, track: canary }
  template:
    metadata:
      labels: { app: web, track: canary }
    spec:
      containers:
        - name: app
          image: <REPLACE_WITH_ECR_URL>:1.1.0
          ports: [{ containerPort: 8080 }]
          readinessProbe:
            httpGet: { path: /healthz, port: 8080 }
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /healthz, port: 8080 }
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits:   { cpu: "500m", memory: "256Mi" }
