DevOps/Projects/k8s-zerodowntime-eks/k8s/31-ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-canary
  namespace: app-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"   # send 10% traffic to canary
spec:
  rules:
    - host: demo.<your-domain-or-lb-dns>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-canary-svc
                port:
                  number: 80
